sort out api bugs

--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -6,20 +6,18 @@
                     <div class="row">
                         <div class="col s12">
                             <p >
-                                <Facebook href=""><i class="medium material-icons">
+                                <a href="https://facebook.com/wematujames" target="_blank"><i class="medium material-icons">
                                     facebook
                                 </i> </a>
                             </p>
-                            <p>https://facebook.com/wematujames</p>
                         </div>
                         
                         <div class="col s12">
                             <p>
-                                <a href=""><i class="medium material-icons">
+                                <a href="mailto:simplyubiquitous2020@gmail.com"><i class="medium material-icons">
                                     mail_outline
                                 </i></a>
                             </p> 
-                            <p>simplyubiquitous2020@gmail.com</p>
                         </div>
                         <div class="col s12">
                             <p >
