--- a/views/createpost.ejs
+++ b/views/createpost.ejs
@@ -15,12 +15,12 @@
           </div>
           <div class="row">
             <div class="input-field col s12">
-              <input name="postTitle" id="input_text" type="text" autocomplete="on">
+              <input name="title" id="input_text" type="text" autocomplete="on">
               <label for="input_text">Post Title</label>
             </div>
             
             <div class="input-field col s12">
-              <textarea name="postContent" id="textarea2" class="materialize-textarea" autocomplete="on"></textarea>
+              <textarea name="body" id="textarea2" class="materialize-textarea" autocomplete="on"></textarea>
               <label for="textarea2">Post Content</label>
             </div>
             <button class="waves-effect waves-light btn" type="submit">Publish</button>
